--- a/Tsltn/BrowseAllTranslationsWindow.xaml
+++ b/Tsltn/BrowseAllTranslationsWindow.xaml
@@ -6,16 +6,32 @@
         xmlns:local="clr-namespace:Tsltn"
         xmlns:r ="clr-namespace:Tsltn.Resources"
         mc:Ignorable="d"
-        Height="800" Width="750"
+        Height="650" Width="500"
+        MaxHeight="{x:Static SystemParameters.PrimaryScreenHeight}"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
         WindowStyle="ThreeDBorderWindow" ResizeMode="CanResizeWithGrip" ShowInTaskbar="False" WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <Style TargetType="Button" BasedOn="{StaticResource StdButton}"/>
-        <Style TargetType="TextBlock">
-            <Style.Setters>
-                <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
-            </Style.Setters>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/StandardResourceDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            
+            <!--
+            <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                <Style.Setters>
+                    <Setter Property="Padding" Value="7,2,7,2"/>
+                    <Setter Property="MinWidth" Value="90"/>
+                </Style.Setters>
+            </Style>
+            -->
+            
+            <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+                <Style.Setters>
+                    <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+                </Style.Setters>
+            </Style>
+        </ResourceDictionary>
+           
     </Window.Resources>
     <DockPanel>
         <DockPanel DockPanel.Dock="Bottom" LastChildFill="False" Background="{x:Static SystemColors.MenuBarBrush}">
@@ -35,7 +51,7 @@
         <ListBox Name="_lbTranslations" DockPanel.Dock="Top" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
                  ItemsSource="{Binding AllTranslations}">
             <ListBox.ItemContainerStyle>
-                <Style TargetType="ListBoxItem">
+                <Style TargetType="ListBoxItem" BasedOn="{StaticResource {x:Type ListBoxItem}}">
                     <Style.Setters>
                         <Setter Property="Margin" Value="0,5"/>
                         <EventSetter Event="MouseDoubleClick" Handler="ListBoxItem_MouseDoubleClick"/>
