--- a/Tsltn/BrowseAllTranslationsWindow.xaml
+++ b/Tsltn/BrowseAllTranslationsWindow.xaml
@@ -60,7 +60,7 @@
             </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Value}" TextWrapping="WrapWithOverflow" FontSize="16"/>
+                    <TextBlock Text="{Binding}" TextWrapping="WrapWithOverflow" FontSize="16"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
